@@ -23,7 +23,7 @@ package cascading;
 import cascading.util.Util;
 import org.junit.Test;
 
-import static junit.framework.Assert.assertEquals;
+import static junit.framework.Assert.*;
 
 /**
  *
@@ -96,4 +96,16 @@ public class UtilTest
       assertEquals( paths[ i ], versions[ i ], Util.findVersion( paths[ i ] ) );
       }
     }
+
+  @Test
+  public void testContainsWhiteSpace()
+    {
+    assertFalse( Util.containsWhitespace( "" ) );
+    assertFalse( Util.containsWhitespace( "aGoodTagMayLookLikeThis" ) );
+    assertTrue( Util.containsWhitespace( " aaa" ) );
+    assertTrue( Util.containsWhitespace( "aaa\t " ) );
+    assertTrue( Util.containsWhitespace( "\tabc\tdef\tghi\t" ) );
+    assertTrue( Util.containsWhitespace( "contains\tstuff\twe\rdon't\nwant\f" ) );
+    }
+
   }
